# mlx-snn

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: 01_quickstart.py
experiments/: compute_5seed_stats.py  v04_benchmarks.py  v04_extra_seeds.py  v04_rerun_fixed.py  v04_snntorch_baseline.py
experiments/results_v04/: curves_exp1_Leaky.csv  curves_exp1_RLeaky.csv  curves_exp1_RSynaptic.csv  curves_exp1_Synaptic.csv  curves_exp2_baseline.csv  curves_exp2_learn_beta.csv  curves_exp2_learn_both.csv  curves_exp2_learn_thresh.csv  curves_exp3_arctan.csv  curves_exp3_fast_sigmoid.csv  curves_exp3_sigmoid.csv  curves_exp3_straight_through.csv  curves_exp3_triangular.csv  curves_exp4_ce_count_loss.csv  curves_exp4_ce_rate_loss.csv  curves_exp4_mse_membrane_loss.csv  curves_exp5_delta.csv  curves_exp5_latency.csv  curves_exp5_rate.csv
experiments/results_v04_5seeds/: curves_exp1_Leaky.csv  curves_exp1_RLeaky_V0.1_learn.csv  curves_exp1_RLeaky_V0.5.csv  curves_exp1_RSynaptic_V0.1_learn.csv  curves_exp1_RSynaptic_V0.5.csv  curves_exp1_Synaptic.csv  curves_exp2_baseline.csv  curves_exp2_learn_beta.csv  (+13 more)
figures/: generate_figures.R
mlxsnn/: __init__.py  nir_export.py  nir_import.py  nir_utils.py
paper/: CITATIONS_REVIEW.md  main.tex  references.bib
paper_v2/: CITATIONS_REVIEW.md  main.bbl  main.tex  references.bib
tests/: test_encoding.py  test_learnable.py  test_neurons.py  test_nir.py  test_recurrent.py  test_surrogate.py  test_training.py  test_v02_encoding.py  test_v02_neurons.py  test_v04_functional.py  test_v04_surrogate.py
(+64 files in other folders)
